--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Listado de Libros</title>
+    <!-- Agregar Bootstrap -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+    <div class="container mt-4">
+        <h1 class="text-center">Listado de Libros</h1>
+        <!-- Tabla de Libros -->
+        <table class="table table-striped table-bordered">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Título</th>
+                    <th>Autor</th>
+                    <th>Género</th>
+                    <th>Año</th>
+                    <th>Precio</th>
+                </tr>
+            </thead>
+            <tbody>
+                <?php foreach ($libros as $libro): ?>
+                    <tr>
+                        <td><?php echo htmlspecialchars($libro['id']); ?></td>
+                        <td><?php echo htmlspecialchars($libro['titulo']); ?></td>
+                        <td><?php echo htmlspecialchars($libro['autor']); ?></td>
+                        <td><?php echo htmlspecialchars($libro['genero']); ?></td>
+                        <td><?php echo htmlspecialchars($libro['anio']); ?></td>
+                        <td><?php echo htmlspecialchars($libro['precio']); ?> €</td>
+                    </tr>
+                <?php endforeach; ?>
+            </tbody>
+        </table>
+    </div>
+    
+    <!-- Scripts de Bootstrap -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
+</html>
